  - enhancement: added support for helpdesk notification for event add form [chilan]
  - enhancement: invoices.hide_expositor - variable to hide expositor in pdf invoice
    generated by tcpdf [interduo]
  - enhancement: invoices.show_customerid - variable to show customerid in pdf invoice
    generated by tcpdf [interduo]
  - enhancement: added user notification about helpdesk ticket status change [chilan]
  - enhancement: current division properties are copied to new receipts [chilan]
  - improvement: resolved tickets in quick search displayed as blended [chilan]
  - enhancement: additional operations on node search result - node group assign
    and unassign [chilan]
  - enhancement: added helper icons in quick search suggestions (customers, node,
    tickets) [chilan]
  - enhancement: added support for tariff burst properties [chilan]
  - enhancement: allow to search nodes by network devices to which
    they are connected to [chilan]
  - enhancement: invoices.use_alert_color configuration variable ('false' by default)
    specifies if deadline, quote to pay and bank accounts are printed as red on tcpdf
    and ezpdf invoices [chilan]

version 1.11.23 (2018-03-21):

  - improvement: create db dumps with multi records inserts statements which
    dramatically reduces db restore time [chilan]
  - enhancement: allow to backup all financial documents issued a given day
    in selected output directory (--backup and --output-directory parameters
    were introduced for lms-sendinvoices.php) [chilan]
  - enhancement: added payments.check_invoices ('false' by default) configuration
    variable support and its behavior is the same as deprecated daemon payments
    module configuration variable [chilan]
  - enhancement: added support for default queue categories used during new ticket
    creation [chilan]
  - improvement: pdf ticket and document attachments are displayed in popup window
    instead of forcing writing them to disk [chilan]