@@ -15,7 +15,9 @@ version ?.??.?? (????-??-??):
     generated by tcpdf [interduo]
   - enhancement: invoices.show_customerid - variable to show customerid in pdf invoice
     generated by tcpdf [interduo]
-  - enhancement: added user notification about helpdesk ticket status change [chilan]
+  - enhancement: added user notification about helpdesk ticket status change
+    - phpui.ticket_state_change_notify configuration variable controls if
+    it is triggered [chilan]
   - enhancement: current division properties are copied to new receipts [chilan]
   - improvement: resolved tickets in quick search displayed as blended [chilan]
   - enhancement: additional operations on node search result - node group assign
